fix logo alignment

--- a/94-laptop UI/style.css
+++ b/94-laptop UI/style.css
@@ -29,6 +29,7 @@ header {
 
 .logo-container {
   flex: 1;
+  align-items: center;
 }
 
 .logo {
